--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,3 @@
-theme: minima
-
-# Uncomment if you are planning to run the blog in a subdirectory
-# Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
-# Example, you must use http://localhost:4000/path/to/blog
-#baseurl: /path/to/blog
-#baseurl:
+theme: jekyll-theme-minimal
+title: 2018 Journal Project
+description: Learning to generate SVGs with Pthon and Javascript.
