--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: 2018 Journal Project
 description: Learning to generate SVGs with Pthon and Javascript.
+highlighter: rouge
