--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes"
 title: 2018 Journal Project
 description: Learning to generate SVGs with Pthon and Javascript.
 highlighter: rouge
